# screencontrol

./: CMakeLists.txt  README.md
Catch2/: CMakeLists.txt  Catch.cmake
src/: screen.hpp  screencontrol.hpp
tests/: test.cpp
